<resources>
    <string name="app_name">ShoppingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">Title</string>
    <string name="notification">Notification</string>
    <string name="chat_history">Chat History</string>
    <string name="profile">Profile</string>
    <string name="production">Production</string>
    <string name="price">price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="email">email</string>
    <string name="you_email">you email</string>
    <string name="password">password</string>
    <string name="tiep_tuc_voi_google">Tiếp tục với Google</string>
    <string name="you_password">you password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="merchant">Merchant</string>
    <string name="welcome_to_app">Welcome to App</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="cart">Cart</string>
    <string name="buy">Buy</string>
    <string name="description">Description</string>
    <string name="ok">OK</string>
    <string name="order">Order</string>
    <string name="order_success">Order Success</string>
    <string name="message_for_the_merchant">Message for the Merchant</string>
    <string name="_100_000_000">100,000,000$</string>
    <string name="message">message</string>
    <string name="total">Total</string>
    <string name="name">Name</string>
    <string name="age">age</string>
    <string name="_100">100</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="chat">Chat</string>
    <string name="see_more">See more</string>
    <string name="history">History</string>
    <string name="order_history">Order History</string>
    <string name="production_list">Production List</string>
    <string name="update_add">Update/Add</string>
    <string name="production_price">Production price</string>
    <string name="production_description">Production Description</string>
    <string name="production_name">Production name</string>
    <string name="time" />
    <string name="shop">SHOP</string>
    <string name="log_out">Log out</string>
    <string name="update">Update</string>
    <string name="todo">TODO</string>
    <string name="search">search here</string>
    <string name="giam">GIẢM</string>
    <string name="find_your_style">Find your style</string>
    <string name="chat_ngay">Chat ngay</string>
    <string name="mua_ngay">Mua ngay</string>
    <string name="them_vao_gio_hang">Thêm vào giỏ hàng</string>
    <string name="_5">/5</string>
    <string name="product_details">Product Details</string>
    <string name="shipping_information">Shipping Information</string>
    <string name="returns">Returns</string>
    <string name="upload">upload</string>
    <string name="my_credit_card">My Credit Card</string>
    <string name="credit">Credit</string>
    <string name="add_credit_card">Add Credit Card</string>
    <string name="delete_cart">Delete Cart</string>
    <string name="information">Information</string>
    <string name="edit_fish_information">Edit Fish Information</string>
    <string name="my_account">My Account</string>
    <string name="switch_to_other_account">Switch to Other Account</string>
    <string name="my_profile">My Profile</string>
    <string name="my_product">My Product</string>
    <string name="liked">liked</string>
    <string name="my_review">My Review</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="birth_date">Birth Date</string>
    <string name="shop_store">Shop Store</string>
    <string name="upload_profile">Upload Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addToCart">Thêm vào giỏ hàng</string>
</resources>