<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <include layout="@layout/header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/message_merchant"
        android:layout_below="@+id/header"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/message_merchant"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_for_the_merchant"/>

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/total"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border"
        android:hint="@string/message" />

    <RelativeLayout
        android:id="@+id/total"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/border"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="30dp"
            android:textColor="@color/red"
            android:fontFamily="sans-serif-black"
            android:text="@string/_100_000_000" />

    </RelativeLayout>

    <Button
        android:id="@+id/order"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#414BB2"
        android:text="@string/order"
        android:textAllCaps="false"
        android:textSize="20sp"></Button>

</RelativeLayout>