<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/border_item_rcv_product"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_margin="10dp"
        android:id="@+id/person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_background"
        android:padding="5dp"
        android:src="@drawable/ic_person" />

    <TextView
        android:id="@+id/name"
        android:layout_toRightOf="@+id/person"
        android:layout_margin="5dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/message"
        android:layout_toRightOf="@+id/person"
        android:layout_below="@+id/name"
        android:layout_marginLeft="5dp"
        android:text="@string/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/time"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/message"
        android:layout_margin="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>