<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MerchantInfoActivity">

    <LinearLayout
        android:id="@+id/back_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/baseline_chevron_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_baseline_chevron_left"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_toEndOf="@+id/baseline_chevron_left"
            android:text="@string/merchant_name"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/cart"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_launcher_cart" />

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="1.8dp"
        android:layout_below="@+id/back_click"
        android:layout_marginTop="15dp"
        android:background="@color/black_AB0" />

    <ImageView
        android:id="@+id/person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/horizontal_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/circle_background"
        android:padding="45dp"
        android:src="@drawable/ic_person" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/person"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/information"
        android:textColor="@android:color/black" />

    <RelativeLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/name"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="15dp"
            android:text="@string/name" />
    </RelativeLayout>

    <View
        android:id="@+id/horizontal_line1"
        android:layout_width="match_parent"
        android:layout_height="1.8dp"
        android:layout_below="@+id/name"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/gray_D1D1D1" />

    <RelativeLayout
        android:id="@+id/age"
        android:layout_below="@+id/horizontal_line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/age"
            android:textColor="@color/black"/>
        <TextView
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/_100"/>
    </RelativeLayout>

    <View
        android:id="@+id/horizontal_line2"
        android:layout_width="match_parent"
        android:layout_height="1.8dp"
        android:layout_below="@+id/age"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/gray_D1D1D1" />

    <RelativeLayout
        android:id="@+id/gender"
        android:layout_below="@+id/horizontal_line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/gender"
            android:textColor="@color/black"/>
        <TextView
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/male"/>
    </RelativeLayout>

    <View
        android:id="@+id/horizontal_line3"
        android:layout_width="match_parent"
        android:layout_height="1.8dp"
        android:layout_below="@+id/gender"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/gray_D1D1D1" />

    <RelativeLayout
        android:id="@+id/title_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/horizontal_line3"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/production"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/see_more"
            android:textColor="@color/purple_bottom_nav"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_above="@+id/chat"
        android:layout_below="@+id/title_product"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/product"
            android:background="@drawable/border_item_rcv_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/background_item_img_product2"
                android:src="@drawable/ic_launcher_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/title"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/description"
                android:textColor="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/description"
                android:textColor="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_toRightOf="@+id/product"
            android:layout_marginLeft="10dp"
            android:background="@drawable/border_item_rcv_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/background_item_img_product2"
                android:src="@drawable/ic_launcher_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/title"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/description"
                android:textColor="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="15dp"
                android:text="@string/description"
                android:textColor="@color/gray" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/chat"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#414BB2"
        android:text="@string/chat"
        android:textAllCaps="false"
        android:textSize="20sp" />

</RelativeLayout>