<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_300sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AddProductCart"
    android:background="@color/white">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imgProduct"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp" />

    <TextView
        android:id="@+id/txtTitle"
        android:text="@string/title"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/imgProduct"
        android:textSize="@dimen/_20ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtPrice"
        android:text="@string/price"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintLeft_toRightOf="@+id/imgProduct"
        android:textSize="@dimen/_15ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"/>

    <ImageView
        android:id="@+id/imgClear"
        android:src="@drawable/ic_baseline_clear_24"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"/>

    <TextView
        android:id="@+id/txt_text"
        android:text="Số lượng"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/imgProduct"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="@dimen/_15ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/imgClear"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_145sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtReduce"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="wrap_content"
            android:text="-"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtQuantity"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtMore"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="wrap_content"
            android:text="+"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAdd"
        android:textAllCaps="false"
        android:text="@string/addToCart"
        app:layout_constraintTop_toBottomOf="@+id/txt_text"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:textSize="@dimen/_15sdp"
        android:backgroundTint="@color/green_39"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/_10sdp"/>
</androidx.constraintlayout.widget.ConstraintLayout>